--- a/css/_global.css
+++ b/css/_global.css
@@ -10,7 +10,7 @@ body{
 }
 
 header{
-    background-color: var(--mainBackground);
+    background-color: var(--emailSignupBackground);
 }
 
 a , a:hover , a:active {
@@ -21,6 +21,26 @@ a , a:hover , a:active {
 span{
     display: inline-flex;
     padding-right: 15px;
+}
+
+section{
+    height: 600px;
+    background-color: var(--emailSignupBackground);
+    background-image: url("../images/bg-curvy-desktop.svg");
+    background-repeat: no-repeat;
+    background-position:bottom;
+    background-position-y: 200px;
+}
+
+button{
+    margin-top: 15px;
+    border-radius: 20px;
+    border: 0;
+    height: 30px;
+    width: 130px;
+    color: var(--white);
+    font-size: 10px;
+    background-image: linear-gradient(to right,var(--cyan),var(--blue));
 }
 
 
