--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,10 @@
     height: 50px;
 }
 
+.productiveImg{
+    height: 270px;
+}
+
 .title2{
     color: var(--white);
     font-weight: 700;
@@ -52,6 +56,18 @@
     margin-top: 10px;
     color: var(--lightGrey);
 }
+.titleThirdSection{
+    color: var(--white);
+    font-weight: 400;
+    width: 350px;
+    margin-top: 10px;
+    color: var(--lightGrey);
+}
+
+.textThirdSection{
+    margin-left: 100px;
+    text-align: left;
+}
 
 .sectionTitles{
     color: var(--white);
@@ -75,7 +91,47 @@
     background-color: var(--mainBackground);
     justify-content: center;
 }
+
 .sectionPart{
     margin: 10px 40px;
+}
+
+.thirdSection{
+    flex:1;
+    display: flex;
+    background-color: var(--mainBackground);
+    align-items: center;
+    justify-content: center;
+    padding-top: 100px;
+}
+
+.aFlyo{
+    margin-top: 10px;
+    color:var(--cyan);
+    text-decoration: underline;
+}
+
+.cards{
+    background-image: url("../images/bg-quotes.png");
+    background-repeat: no-repeat;
+   
+    flex: 2;
+    padding-top: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: var(--mainBackground);
+    justify-content: center;
+    border: 30px;
+    
+}
+
+.card{
+    width: 20%;
+    height: 50%;
+    margin: 20px;
+    padding: 30px;
+    background-color: var(--testemonialsBackground);
+    color: var(--white);
+    border-radius: 10px;
 }
 
